Implemented sorting for displaying movies based on likes, dislikes and dates.

--- a/app/public/assets/css/app.css
+++ b/app/public/assets/css/app.css
@@ -278,3 +278,9 @@ textarea:focus {
 .btn-dark {
   background-color: #f38d09 !important;
 }
+
+.info-style,
+.info-style:hover {
+  text-decoration: none;
+  color: #fff;
+}
